tests/ui/fail/missing_comma_after_map.rs
use macro_files::create;

fn main() {
    create!({
        "docs": {
            "README.md": "# Title"
        }
        "LICENSE": "MIT"
    });
}
